# TDT4200-Project-4

./: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake
input/: cubes.mtl  spheres.mtl
src/: main.cpp
src/common/: lodepng.cpp
src/cpu/: cpurasteriser.cpp  cpurasteriser.hpp
src/cpu/utilities/: OBJLoader.cpp  OBJLoader.hpp  floats.hpp  geometry.cpp  geometry.hpp
src/gpu/: gpurasteriser.cu  gpurasteriser.cuh
src/gpu/utilities/: OBJLoader.cpp  OBJLoader.hpp  cuda_error_helper.hpp  geometry.cpp  geometry.hpp  mat4.hpp
